--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Guna.Charts.WinForms, Version=1.0.8.0, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
+      <HintPath>..\packages\Guna.Charts.WinForms.1.0.8\lib\net48\Guna.Charts.WinForms.dll</HintPath>
+    </Reference>
     <Reference Include="Guna.UI">
       <HintPath>..\..\TV_GUNA\Guna.UI-Framework-Lib-master\Guna.UI WinForms\.net 4.0\Guna.UI.dll</HintPath>
     </Reference>
@@ -232,6 +235,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="TruongPhongBUS.cs" />
+    <Compile Include="UCTienDoCaNhan.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UCTienDoCaNhan.Designer.cs">
+      <DependentUpon>UCTienDoCaNhan.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControl\UCPhanCongDaHT.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -386,6 +395,7 @@
     <Compile Include="XemDAChuaHTTPBUS.cs" />
     <Compile Include="XemDuAnBUS.cs" />
     <Compile Include="XemDuAnQLBUS.cs" />
+    <Compile Include="XemTienDoPCBUS.cs" />
     <Compile Include="XemXinNghiChuaDuyetQLBUS.cs" />
     <Compile Include="XemXinNghiDaDuyetQLBUS.cs" />
     <Compile Include="XemXinNghiQLBUS.cs" />
@@ -473,6 +483,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UCTienDoCaNhan.resx">
+      <DependentUpon>UCTienDoCaNhan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControl\UCPhanCongDaHT.resx">
       <DependentUpon>UCPhanCongDaHT.cs</DependentUpon>
