--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -64,13 +64,19 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CapNhatTienDoBUS.cs" />
-    <Compile Include="ChartDABUS.cs" />
-    <Compile Include="CheckInModel.cs" />
-    <Compile Include="CheckIOBUS.cs" />
-    <Compile Include="CheckIODAO.cs" />
-    <Compile Include="CheckOutModel.cs" />
-    <Compile Include="ChiaThuongBUS.cs" />
+    <Compile Include="FXemLuong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FXemLuong.Designer.cs">
+      <DependentUpon>FXemLuong.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControl\CapNhatTienDoBUS.cs" />
+    <Compile Include="UserControl\ChartDABUS.cs" />
+    <Compile Include="Model\CheckInModel.cs" />
+    <Compile Include="UserControl\CheckIOBUS.cs" />
+    <Compile Include="DataAccessObj\CheckIODAO.cs" />
+    <Compile Include="Model\CheckOutModel.cs" />
+    <Compile Include="UserControl\ChiaThuongBUS.cs" />
     <Compile Include="FChartDA.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -209,11 +215,11 @@
     <Compile Include="FXemDuAn.Designer.cs">
       <DependentUpon>FXemDuAn.cs</DependentUpon>
     </Compile>
-    <Compile Include="KPIBUS.cs" />
-    <Compile Include="HoanThanhDuAnBUS.cs" />
-    <Compile Include="LuongCNBUS.cs" />
-    <Compile Include="LuongDAO.cs" />
-    <Compile Include="LuongModel.cs" />
+    <Compile Include="UserControl\KPIBUS.cs" />
+    <Compile Include="UserControl\HoanThanhDuAnBUS.cs" />
+    <Compile Include="UserControl\LuongCNBUS.cs" />
+    <Compile Include="DataAccessObj\LuongDAO.cs" />
+    <Compile Include="Model\LuongModel.cs" />
     <Compile Include="Model\CongViecModel.cs" />
     <Compile Include="DataAccessObj\CheckinDao.cs" />
     <Compile Include="DataAccessObj\CheckoutDao.cs" />
@@ -224,19 +230,19 @@
     <Compile Include="Model\DuAnModel.cs" />
     <Compile Include="Model\LoaiPhongBanModel.cs" />
     <Compile Include="Model\NhanVienModel.cs" />
-    <Compile Include="MucLuongDAO.cs" />
-    <Compile Include="MucLuongModel.cs" />
-    <Compile Include="NhanXetDABUS.cs" />
+    <Compile Include="DataAccessObj\MucLuongDAO.cs" />
+    <Compile Include="Model\MucLuongModel.cs" />
+    <Compile Include="UserControl\NhanXetDABUS.cs" />
     <Compile Include="Model\PhanCongModel.cs" />
     <Compile Include="Model\HoTroModel.cs" />
     <Compile Include="Reload.cs" />
-    <Compile Include="NhanXetDATPBUS.cs" />
-    <Compile Include="SuaDABUS.cs" />
-    <Compile Include="TaoXinNghiBUS.cs" />
-    <Compile Include="ThemDABUS.cs" />
-    <Compile Include="ThemPhanCongBUS.cs" />
-    <Compile Include="ThemHoTroBUS.cs" />
-    <Compile Include="ThongTinDABUS.cs" />
+    <Compile Include="UserControl\NhanXetDATPBUS.cs" />
+    <Compile Include="UserControl\SuaDABUS.cs" />
+    <Compile Include="UserControl\TaoXinNghiBUS.cs" />
+    <Compile Include="UserControl\ThemDABUS.cs" />
+    <Compile Include="UserControl\ThemPhanCongBUS.cs" />
+    <Compile Include="UserControl\ThemHoTroBUS.cs" />
+    <Compile Include="UserControl\ThongTinDABUS.cs" />
     <Compile Include="Model\PhongBanModel.cs" />
     <Compile Include="DataAccessObj\PhongBanDAO.cs" />
     <Compile Include="DataProvider.cs" />
@@ -258,18 +264,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="TinhLuongBUS.cs" />
-    <Compile Include="TruongPhongBUS.cs" />
-    <Compile Include="UCLuongCN.cs">
+    <Compile Include="UserControl\TinhLuongBUS.cs" />
+    <Compile Include="UserControl\TruongPhongBUS.cs" />
+    <Compile Include="UserControl\UCLuongCN.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UCLuongCN.Designer.cs">
+    <Compile Include="UserControl\UCLuongCN.Designer.cs">
       <DependentUpon>UCLuongCN.cs</DependentUpon>
     </Compile>
-    <Compile Include="UCTienDoCaNhan.cs">
+    <Compile Include="UserControl\UCTienDoCaNhan.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UCTienDoCaNhan.Designer.cs">
+    <Compile Include="UserControl\UCTienDoCaNhan.Designer.cs">
       <DependentUpon>UCTienDoCaNhan.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControl\DuyetXinNghiBUS.cs" />
@@ -292,12 +298,6 @@
       <DependentUpon>UCXemXinNghiDaDuyet.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControl\ThuongCaNhanBUS.cs" />
-    <Compile Include="UserControl\UCLuong.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UserControl\UCLuong.Designer.cs">
-      <DependentUpon>UCLuong.cs</DependentUpon>
-    </Compile>
     <Compile Include="UserControl\UCThuongCaNhan.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -407,33 +407,22 @@
     <Compile Include="UserControl\UCTienDoDA.Designer.cs">
       <DependentUpon>UCTienDoDA.cs</DependentUpon>
     </Compile>
-    <Compile Include="Add.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Add.Designer.cs">
-      <DependentUpon>Add.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FXinNghi.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FXinNghi.Designer.cs">
-      <DependentUpon>FXinNghi.cs</DependentUpon>
-    </Compile>
     <Compile Include="UserControl\XemDAChuaHTQLBUS.cs" />
     <Compile Include="UserControl\XemDADaHTTPBUS.cs" />
     <Compile Include="UserControl\XemDADaHTQLBUS.cs" />
     <Compile Include="UserControl\XemPCChuaHTTPBUS.cs" />
     <Compile Include="UserControl\XemPCNVBUS.cs" />
     <Compile Include="UserControl\XinNghiDaDuyetBUS.cs" />
-    <Compile Include="XemDAChuaHTTPBUS.cs" />
-    <Compile Include="XemDuAnBUS.cs" />
-    <Compile Include="XemDuAnQLBUS.cs" />
-    <Compile Include="XemTienDoPCBUS.cs" />
-    <Compile Include="XemXinNghiChuaDuyetQLBUS.cs" />
-    <Compile Include="XemXinNghiQLBUS.cs" />
-    <Compile Include="XinNghiDAO.cs" />
-    <Compile Include="XinNghiModel.cs" />
-    <Compile Include="XinNghiNVBUS.cs" />
+    <Compile Include="UserControl\XemDAChuaHTTPBUS.cs" />
+    <Compile Include="UserControl\XemDuAnBUS.cs" />
+    <Compile Include="UserControl\XemDuAnQLBUS.cs" />
+    <Compile Include="UserControl\XemTienDoPCBUS.cs" />
+    <Compile Include="UserControl\XemXinNghiChuaDuyetQLBUS.cs" />
+    <Compile Include="UserControl\XemXinNghiQLBUS.cs" />
+    <Compile Include="DataAccessObj\XinNghiDAO.cs" />
+    <Compile Include="Model\XinNghiModel.cs" />
+    <Compile Include="UserControl\XinNghiNVBUS.cs" />
+    <Compile Include="UserControl\XemLuongBUS.cs" />
     <EmbeddedResource Include="FCapNhatTienDo.resx">
       <DependentUpon>FCapNhatTienDo.cs</DependentUpon>
     </EmbeddedResource>
@@ -515,6 +504,9 @@
     <EmbeddedResource Include="FXemDuAn.resx">
       <DependentUpon>FXemDuAn.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FXemLuong.resx">
+      <DependentUpon>FXemLuong.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FXinNghiNV.resx">
       <DependentUpon>FXinNghiNV.cs</DependentUpon>
     </EmbeddedResource>
@@ -526,17 +518,14 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="UCLuongCN.resx">
+    <EmbeddedResource Include="UserControl\UCLuongCN.resx">
       <DependentUpon>UCLuongCN.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UCTienDoCaNhan.resx">
+    <EmbeddedResource Include="UserControl\UCTienDoCaNhan.resx">
       <DependentUpon>UCTienDoCaNhan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControl\UCPhanCongDaHT.resx">
       <DependentUpon>UCPhanCongDaHT.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UserControl\UCLuong.resx">
-      <DependentUpon>UCLuong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControl\UCThuongCaNhan.resx">
       <DependentUpon>UCThuongCaNhan.cs</DependentUpon>
@@ -564,12 +553,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserControl\UCSailorStar.resx">
       <DependentUpon>UCSailorStar.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Add.resx">
-      <DependentUpon>Add.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FXinNghi.resx">
-      <DependentUpon>FXinNghi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControl\UCXemXinNghiChuaDuyet.resx">
       <DependentUpon>UCXemXinNghiChuaDuyet.cs</DependentUpon>
