--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Guna.Charts.WinForms, Version=1.0.8.0, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
       <HintPath>..\packages\Guna.Charts.WinForms.1.0.8\lib\net48\Guna.Charts.WinForms.dll</HintPath>
     </Reference>
@@ -46,9 +52,12 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
@@ -64,11 +73,59 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Checkin.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Checkout.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CongViec.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DuAn.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="FXemLuong.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FXemLuong.Designer.cs">
       <DependentUpon>FXemLuong.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoaiPhongBan.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Luong.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MucLuong.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="NhanVien.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PhanCong.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PhongBan.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="QLCTModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLCTModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="QLCTModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="QLCTModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLCTModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="TaiKhoan.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
     </Compile>
     <Compile Include="UserControl\CapNhatTienDoBUS.cs" />
     <Compile Include="UserControl\ChartDABUS.cs" />
@@ -341,11 +398,8 @@
       <DependentUpon>UCXemPhanCong.cs</DependentUpon>
     </Compile>
     <Compile Include="DAO\XemDADAO.cs" />
-    <Compile Include="Object\XinNghi.cs" />
     <Compile Include="DAO\DangNhapDao.cs" />
     <Compile Include="Object\DanhGia.cs" />
-    <Compile Include="Object\DuAn.cs" />
-    <Compile Include="Object\PhanCong.cs" />
     <Compile Include="DAO\DanhGiaDAO.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="FDuAn.cs">
@@ -423,6 +477,9 @@
     <Compile Include="Model\XinNghiModel.cs" />
     <Compile Include="UserControl\XinNghiNVBUS.cs" />
     <Compile Include="UserControl\XemLuongBUS.cs" />
+    <Compile Include="XinNghi.cs">
+      <DependentUpon>QLCTModel.tt</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FCapNhatTienDo.resx">
       <DependentUpon>FCapNhatTienDo.cs</DependentUpon>
     </EmbeddedResource>
@@ -575,6 +632,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <EntityDeploy Include="QLCTModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>QLCTModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="QLCTModel.edmx.diagram">
+      <DependentUpon>QLCTModel.edmx</DependentUpon>
+    </None>
     <None Include="Resources\DangNhap.png" />
   </ItemGroup>
   <ItemGroup>
@@ -963,6 +1027,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\social-responsibility.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="QLCTModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>QLCTModel.edmx</DependentUpon>
+      <LastGenOutput>QLCTModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="QLCTModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>QLCTModel.edmx</DependentUpon>
+      <LastGenOutput>QLCTModel.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
