--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -617,6 +617,7 @@
     <EmbeddedResource Include="UserControl\UCXemXinNghiDaDuyet.resx">
       <DependentUpon>UCXemXinNghiDaDuyet.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
