--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -100,9 +100,11 @@
     <Compile Include="MucLuong.cs">
       <DependentUpon>QLCTModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="NhanSuBUS.cs" />
     <Compile Include="NhanVien.cs">
       <DependentUpon>QLCTModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="NhanVienBUS.cs" />
     <Compile Include="PhanCong.cs">
       <DependentUpon>QLCTModel.tt</DependentUpon>
     </Compile>
@@ -124,9 +126,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QLCTModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="QuanLyBUS.cs" />
     <Compile Include="TaiKhoan.cs">
       <DependentUpon>QLCTModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ThongTinBUS.cs" />
     <Compile Include="UserControl\CapNhatTienDoBUS.cs" />
     <Compile Include="UserControl\ChartDABUS.cs" />
     <Compile Include="Model\CheckInModel.cs" />
@@ -445,7 +449,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DAO\QuanLyDAO.cs" />
     <Compile Include="DAO\TDCaNhanDAO.cs" />
-    <Compile Include="DAO\ThongTinDAO.cs" />
     <Compile Include="Object\TienDoDA.cs" />
     <Compile Include="DAO\TienDoDADAO.cs" />
     <Compile Include="DAO\TruongPhongDAO.cs" />
@@ -480,6 +483,7 @@
     <Compile Include="XinNghi.cs">
       <DependentUpon>QLCTModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="XoaDABUS.cs" />
     <EmbeddedResource Include="FCapNhatTienDo.resx">
       <DependentUpon>FCapNhatTienDo.cs</DependentUpon>
     </EmbeddedResource>
